Fix sizing issues on mobile

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -3,16 +3,19 @@
   height: 100%;
   width: 100%;
   position: relative;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .home-text {
-	color: white;
+  color: white;
+  width: 100%;
+  text-align: center;
+  font-size: 60vw;
 }
-    
+
 h1 {
-  font-size: 60px;
+  font-size: 60vw;
 }
